--- a/gb/news392_5.md
+++ b/gb/news392_5.md
@@ -21,7 +21,12 @@
 当我们在埋怨西方社会，因为一厢情愿的绥靖政策，从上世纪70年代开始一次又一次地拯救了垂亡的共产主义政权时，全世界所有共产主义者，却一致地把所有他们遇到的问题归咎于西方的蛊惑和颠.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 2:38 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11694548.md#1" target="_blank">袁斌：外交部发言人成笑料 模拟器嗨翻网络</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11694548.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/2019-04-25-11.41-150x120.jpg" align ="left"></a>中共内外情势交相逼迫、争议频传，近期尤以美中贸易战、香港、新疆、共谍等议题最为烫手。面对五花八门的议题，中共外交部发言人耿爽向来以类似的论述应对，下面几段话便是他今年在记者发布会上的答问，请诸位耐着性子读完：......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 2:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11694054.md#1" target="_blank">方言：大纪元遭恶意破坏 幕后主凶是谁</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/2/n11694054.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/fire-top-1-600x400-150x120.jpg" align ="left"></a>11月30日（周六），《大纪元时报》头版报导中国央视伦敦女记者孔林琳因去年在英国保守党年会上掌掴一名义工学生被控袭击罪的罪名成立、判12个月有条件释放及罚款的新闻，当天大纪元设在纽约法拉盛地铁口的一排报箱被人故意推倒。《大纪元时报》创刊19年来，该报设在世界各国的报箱屡遭人为破坏，几乎连大纪元人自己都数不清这是第几次遭.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 10:30 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/1/n11693707.md#1" target="_blank">廖祖笙：看看廖祖笙的今天 想想香港人的明天</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/1/n11693707.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/2019-12-01_155606-150x120.jpg" align ="left"></a>习近平先生，昨天我在给你的申诉和建言中，就怎么解决香港目前存在的问题，谈了一些粗浅的看法，希望能或多或少给你以帮助和参考。若你觉得严惩各地的政法流氓、人权恶棍、黑恶警渣、枉判法官，给法治以颜面，给国家以正气，给港人以信心，会是一个浩大的工程，所做的手术太大，那么还有一个更便捷的方法，即兑现中英联合声明的相关承诺，确保港.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 6:14 AM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11699361.md#1" target="_blank">金浴凤: ?土共体制性失败</a><br></h3>陆众本知党是假，只因怕党故做假
+下官为了往上爬，假造政绩搏党夸
+党恩笼络信有加，下官得意胆更大
+原来说谎能升官，哪官还去说真话
+层层欺骗层层乐，中央自信乐开花......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:42 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11699318.md#1" target="_blank">曾铮：从王立强案及川普弹劾案看民主社会危机</a><br></h3>看了以上题目，也许您会奇怪：中共投诚澳洲的间谍王立强怎么与川普弹劾案扯上边了？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 1:28 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/4/n11698872.md#1" target="_blank">夏林: 向心龚青为何与孟晚舟待遇不同</a><br></h3>去年12月孟晚舟在温哥华转机时，被加拿大骑警突然逮捕。不为人知的孟晚舟瞬间成为世界上最出名的女人。她的身份、她的父亲、华为的背景被迅速起底。随之而来的，是中共对加拿大的报复。中共除了抗议之外，还扣押了两位加拿大人，而且拒绝进口加拿大农产品，要加拿大农民为抓孟晚舟付出代价。
 
 这次王立强出逃澳州，爆料他的间谍老板是向.........<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月04日 8:33 AM			</td></tr>
@@ -55,6 +60,5 @@
 无神邪心灭人类。
 
 责任编辑：高义......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:25 AM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/1/n11693751.md#1" target="_blank">朱同：多行不义必自毙</a><br></h3>最近党媒都很火大、鬼火都绿了，忙到脚不沾地，批判“香港人权与民主法案”，批判“美帝霸权主义”。好多都是陈词滥调，没有新意。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月02日 7:13 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_4.md#1">上一页</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392.md#1">1</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_4.md#1">4</a>&nbsp;&nbsp;5&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_6.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/news392_5.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/news392_5.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/news392_5.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news392_5.htm">http://www.epochtimes.com/gb/news392_5.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
