--- a/gb/news2007.md
+++ b/gb/news2007.md
@@ -32,12 +32,12 @@
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11709373.md#1" target="_blank">天地清明引(132) 东流水－大疫横行1</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11709373.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2015/07/Fotolia_22324167_Subscription_L-150x120.jpg" align ="left"></a>兵部军营已有一人染病毙命，王城发全城戒严通告，一时之间，偌大的繁华之地，死寂一片。王庭各院早已闭门，太监宫女按太医指示，熏艾撒醋。礼部按照典籍记载，行祭天大典，以安王命。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 8:00 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711594.md#1" target="_blank">试着说爱</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711594.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/12/Fotolia_43183494_Subscription_L-150x120.jpg" align ="left"></a>把爱说出口，并不是那么困难。时常把爱挂在嘴边，必定能促进家人之间的关系。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 2:39 AM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711261.md#1" target="_blank">青松絮语：免费理发</a><br></h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711261.md#1" target="_blank"><img width="150" src="http://i.epochtimes.com/assets/uploads/2019/04/kite-150x120.jpg" align ="left"></a>拖着厚重的面子，我们畏首畏尾，对正常的社会交换也感到胆怯。如果抛却那种种顾虑，坦坦荡荡面对一切，既能真诚待人，又能豁达行事，对“免费理发”这样的事也不心生排斥，岂不是更好吗？......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 11:06 PM			</td></tr>
+<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713632.md#1" target="_blank">五绝：善语慈心</a><br></h3>法指瑶台路，迷红万丈渊。 心明离桎梏，神舵度流年。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 9:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711043.md#1" target="_blank">七律：意</a><br></h3>不忍严冬萧瑟漫， 细寻生意踏冰河。 多情垂柳摇金发， 沉默杉松耸玉柯。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月12日 12:12 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/11/n11716173.md#1" target="_blank">五律：黄昏</a><br></h3>寒鼓夕阳阔，落霞天际悠。 飞鸿成一点，逝景合长流。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:33 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/10/n11713631.md#1" target="_blank">五绝：证悟</a><br></h3> 念出妖魔灭，神威止恶凶。 善行千万里，入定一棵松。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 10:11 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711109.md#1" target="_blank">虞美人．忧</a><br></h3> 严冬万木萧疏处，一片忧伤度。 干枯栎叶不离枝，但有风来声瑟感心知。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月11日 12:13 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711098.md#1" target="_blank">七律：陀螺</a><br></h3> 河冰初厚打陀螺， 鞭子抡圆脆响多。 嬉戏之人求热汗， 飞旋螺哨送欢歌。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月10日 1:13 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711055.md#1" target="_blank">五律：雾</a><br></h3>海市横空出，蜃楼摇地斜。 众芳隐深幕，高影透轻纱。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:56 PM			</td></tr>
-<tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/19/12/9/n11711048.md#1" target="_blank">台湾古典诗：中美贸易战（二）</a><br></h3>美中谈判鬼胎怀，烽火延烧伏笔埋， 宝岛深耕冲击少，全球贸易扫阴霾。......<br><img align="bottom" src="http://www.epochtimes.com/assets/themes/djy/images/time.gif"> 2019年12月09日 8:49 PM			</td></tr>
 <tr><td><h3><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1">上一页</a>&nbsp;&nbsp;1 &nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_2.md#1">2</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_3.md#1">3</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_4.md#1">4</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_5.md#1">5</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_6.md#1">6</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_7.md#1">7</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_8.md#1">8</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_9.md#1">9</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_10.md#1">10</a>&nbsp;&nbsp;<a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007_2.md#1">下一页</a></h3></td></tr>
 </table><h4>手机上长按并复制下列链接或二维码分享本文章：</h4>https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1<br><a href="https://github.com/nexmjc248/djy/blob/master/gb/news2007.md#1"><img src="http://d1p1.ip.zn2.us/v.php?action=qrcode&url=https://github.com/nexmjc248/djy/blob/master/gb/news2007.md%231" title="分享本文章"></a><br>原文地址： <a href="http://www.epochtimes.com/gb/news2007.htm">http://www.epochtimes.com/gb/news2007.htm</a>    （国内需<a href="https://git.io/JesJV">下载翻墙软件</a>才能访问）</p>
